<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".cal.MacroFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/back_btn"
            android:layout_width="56dp"
            android:layout_height="match_parent"
            android:layout_gravity="start|center"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:src="@drawable/ic_back_black"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="11dp" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/macro_calculator"
            android:textColor="@color/black"
            android:textSize="18sp" />
    </androidx.appcompat.widget.Toolbar>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/calorie_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="22dp"
        android:layout_marginTop="16dp"
        app:boxCornerRadiusBottomEnd="30dp"
        app:boxCornerRadiusBottomStart="30dp"
        app:boxCornerRadiusTopEnd="30dp"
        app:boxCornerRadiusTopStart="30dp"
        app:helperTextTextColor="#FD0320"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/calorie"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:hint="@string/enter_calorie"
            android:inputType="number"
            android:paddingStart="30dp"
            android:paddingEnd="30dp"
            android:textColorHint="#4D000000" />
    </com.google.android.material.textfield.TextInputLayout>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:rowCount="2"
        android:columnCount="2"
        android:layout_margin="16dp"
        app:layout_constraintBottom_toTopOf="@+id/calculate_btn"
        app:layout_constraintTop_toBottomOf="@+id/calorie_layout">

        <androidx.cardview.widget.CardView
            android:id="@+id/first"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:cardCornerRadius="10dp"
            android:elevation="8dp"
            android:layout_margin="16dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1">

            <TextView
                android:layout_gravity="center"
                android:gravity="center"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_60_25_15_high_carb" />
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:id="@+id/second"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:cardCornerRadius="10dp"
            android:elevation="8dp"
            android:layout_margin="16dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1">

            <TextView
                android:layout_gravity="center"
                android:gravity="center"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_50_30_20_moderate" />
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:id="@+id/third"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:cardCornerRadius="10dp"
            android:elevation="8dp"
            android:layout_margin="16dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1">

            <TextView
                android:layout_gravity="center"
                android:gravity="center"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_40_30_30_zone_diet" />
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:id="@+id/fourth"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:cardCornerRadius="10dp"
            android:elevation="8dp"
            android:layout_margin="16dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1">

            <TextView
                android:layout_gravity="center"
                android:gravity="center"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_25_45_30_low_carb" />
        </androidx.cardview.widget.CardView>

    </GridLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/calculate_btn"
        android:layout_width="0dp"
        android:layout_height="65dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/calculate"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:cornerRadius="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>